# update-checker-rs

./: LICENSE  README.md
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  repos.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
