[package]
name = "update-checker-rs"
version = "0.1.2"
description = "update-checker-rs is a lightweight desktop app that tracks the latest releases of GitHub repositories. Built with Tauri, Rust, and JavaScript, it allows users to add repositories, check for updates, and store data locally"
authors = ["Mukund Yedunuthala"]
edition = "2024"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "update_checker_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }
